@@ -1,3 +1,9 @@
+2005-06-12  Not Zed  <NotZed@Ximian.com>
+
+	* mail-session.c (ms_get_service, ms_get_uri): implement overrides
+	so that we can remap uri's from ours to internal ones, so that
+	camel can access resources using static uris.
+
 2005-06-11  Not Zed  <NotZed@Ximian.com>
 
 	* message-list.c (message_list_copy): converted to use iterator.
